Update Int.java